# Sonic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: quality.yml  tests.yml
sonic/: __init__.py  audio_io.py  processor.py  types.py
src/: __init__.py  audio_io.py  processor.py  processors.py  types.py  utils.py
tests/: test_basic.py
