[project]
name = "audio-seperation"
version = "0.1.0"
description = "Pure Python audio processing library - crop, combine, tempo match, BPM detection, time-shifting"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Audio Seperation Contributors" }
]
keywords = ["audio", "processing", "music", "dsp", "tempo", "bpm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/audio-seperation"
"Documentation" = "https://github.com/yourusername/audio-seperation#readme"
"Repository" = "https://github.com/yourusername/audio-seperation.git"
"Issues" = "https://github.com/yourusername/audio-seperation/issues"
"Changelog" = "https://github.com/yourusername/audio-seperation/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
